--- a/.gitignore
+++ b/.gitignore
@@ -30,4 +30,4 @@ _ReSharper*/
 .vs/
 #Nuget packages folder
 packages/
-/Python/ZzPythonProject/.idea/workspace.xml
+/Python/ZzPythonProject/.idea/*
