--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,6 @@ __pycache__*/
 /Python/ZzPythonProject/.idea/cntk_tutorials.iml
 Python/ZzPythonProject/.idea/misc.xml
 Python/ZzPythonProject/.idea/cntk_tutorials.iml
+Python/ZzPythonProject/ZzPeaksPrediction/.pytest_cache/README.md
+Python/ZzPythonProject/ZzPeaksPrediction/.pytest_cache/v/cache/lastfailed
+Python/ZzPythonProject/ZzPeaksPrediction/.pytest_cache/v/cache/nodeids
