Fixed all saving and visualization

--- a/Python/ZzPythonProject/MarketResearch/Settings.json
+++ b/Python/ZzPythonProject/MarketResearch/Settings.json
@@ -1,9 +1,10 @@
 {
-  "path" : "C:\\Users\\PunkBASSter\\AppData\\Roaming\\MetaQuotes\\Terminal\\Common\\Files\\",
-  "file_name" : "_EURUSD_PERIOD_D1.csv",
+  "input_folder" : "",
+  "file_name" : "EURUSD_PERIOD_H1.csv",
   "columns_to_take" : ["timestamp", "open", "close"],
-  "out_file_name_prefix" : "Prob_",
-  "calculations_file_name_prefix" : "Calc_",
+  "output_folder" : "",
+  "out_file_name_prefix" : "Prob",
+  "calculations_file_name_prefix" : "Calc",
   "ind_period" : 1,
   "bands_period" : 20,
   "std_bands" : [-2.5, -2, -1.5, -1, -0.5, 0, 0.5, 1, 1.5, 2, 2.5],
