Obsoletion fix  in pandas

--- a/Python/ZzPythonProject/MarketResearch/Settings.json
+++ b/Python/ZzPythonProject/MarketResearch/Settings.json
@@ -1,18 +1,18 @@
 {
-  "input_folder" : "",
-  "file_name" : "EURUSD_PERIOD_H1.csv",
+  "input_folder" : "C:\\Users\\PunkBASSter\\AppData\\Roaming\\MetaQuotes\\Terminal\\Common\\Files\\",
+  "file_name" : "_EURUSD_PERIOD_D1.csv",
   "columns_to_take" : ["timestamp", "open", "close"],
   "output_folder" : "",
   "out_file_name_prefix" : "Prob",
   "calculations_file_name_prefix" : "Calc",
   "ind_period" : 1,
-  "bands_period" : 20,
+  "bands_period" : 12,
   "std_bands" : [-2.5, -2, -1.5, -1, -0.5, 0, 0.5, 1, 1.5, 2, 2.5],
   "indicator_name" : "Body",
-  "sequence_min_len" : 3,
-  "sequence_max_len" : 5,
+  "sequence_min_len" : 1,
+  "sequence_max_len" : 1,
   "plot_indicator" : true,
-  "save_calculations" : true,
+  "save_calculations" : false,
   "float_precision" : 6,
   "csv_separator" : ","
 }
