--- a/Python/ZzPythonProject/MarketResearch/Settings.json
+++ b/Python/ZzPythonProject/MarketResearch/Settings.json
@@ -7,10 +7,10 @@
   "calculations_file_name_prefix" : "Calc",
   "ind_period" : 1,
   "bands_period" : 12,
-  "std_bands" : [-2.5, -2, -1.5, -1, -0.5, 0, 0.5, 1, 1.5, 2, 2.5],
+  "std_bands" : [-2.4, -1.8, -1.2, -0.6, 0, 0.6, 1.2, 1.8, 2.4],
   "indicator_name" : "Body",
-  "sequence_min_len" : 1,
-  "sequence_max_len" : 1,
+  "sequence_min_len" : 3,
+  "sequence_max_len" : 3,
   "plot_indicator" : true,
   "save_calculations" : false,
   "float_precision" : 6,
