--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ __pycache__*/
 Python/ZzPythonProject/MarketResearch/EURUSD_PERIOD_H1.csv
 venv/
 /Python/ZzPythonProject/MarketResearch/.ipynb_checkpoints/NotebookPatternProb-checkpoint.ipynb
+/Python/ZzPythonProject/ZigZag/.ipynb_checkpoints/ZigZagExample-checkpoint.ipynb
