Market research with data updates and +notebooks

--- a/.gitignore
+++ b/.gitignore
@@ -36,5 +36,5 @@ __pycache__*/
 .pytest_cache/
 Python/ZzPythonProject/MarketResearch/EURUSD_PERIOD_H1.csv
 venv/
-/Python/ZzPythonProject/MarketResearch/.ipynb_checkpoints/NotebookPatternProb-checkpoint.ipynb
-/Python/ZzPythonProject/ZigZag/.ipynb_checkpoints/ZigZagExample-checkpoint.ipynb
+.ipynb_checkpoints/
+.ipynb_checkpoints*/
