--- a/Python/ZzPythonProject/MarketResearch/Settings.json
+++ b/Python/ZzPythonProject/MarketResearch/Settings.json
@@ -1,6 +1,6 @@
 {
   "input_folder" : "",
-  "file_name" : "Rates_EURUSD_PERIOD_H1.csv",
+  "file_name" : "_USA500b_PERIOD_D1.csv",
   "columns_to_take" : ["timestamp", "open", "close"],
   "output_folder" : "",
   "out_file_name_prefix" : "Prob",
@@ -9,10 +9,10 @@
   "bands_period" : 12,
   "std_bands" : [-2.4, -1.8, -1.2, -0.6, 0, 0.6, 1.2, 1.8, 2.4],
   "indicator_name" : "Body",
-  "sequence_min_len" : 2,
-  "sequence_max_len" : 4,
-  "plot_indicator" : true,
+  "sequence_min_len" : 3,
+  "sequence_max_len" : 5,
+  "plot_last_samples" : 200,
   "save_calculations" : false,
-  "float_precision" : 3,
-  "csv_separator" : ","
+  "float_precision" : 2,
+  "csv_separator" : ";"
 }
