MQL4 side added to repository

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,28 @@ venv/
 .ipynb_checkpoints*/
 /Python/ZzPythonProject/WrtMarketResearch/ResultData/*.csv
 /Python/ZzPythonProject/WrtMarketResearch/Probability_Body_Range_RangeUp_RangeDn_Gaps.zip
+
+#MQL4-5 Ignore Section
+*.ex4
+*.ex5
+MQL4/Experts/*
+!MQL4/Experts/PunkBASSter/
+MQL4/Files/*
+!MQL4/Files/PunkBASSter/
+MQL4/Indicators/*
+!MQL4/Indicators/PunkBASSter/
+MQL4/Include/*
+!MQL4/Include/PunkBASSter/
+!MQL4/Include/Dependencies/
+MQL4/Libraries/*
+!MQL4/Libraries/PunkBASSter/
+MQL4/Logs/*
+MQL4/Scripts/*
+!MQL4/Scripts/PunkBASSter/
+
+
+
+
+
+
+
