Added vsode to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,8 @@ venv/
 /Python/ZzPythonProject/WrtMarketResearch/ResultData/*.csv
 /Python/ZzPythonProject/WrtMarketResearch/Probability_Body_Range_RangeUp_RangeDn_Gaps.zip
 Python/ZzPythonProject/Integration/DataFolder/
-
+.vscode/
+.vscode*/
 
 
 #MQL4-5 Ignore Section
